--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.5.0",
     "expo": "~54.0.12",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
