--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-native": "^0.81.5",
+    "react-native-date-time-picker": "^0.0.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
