--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
+
 {
   "expo": {
     "name": "OPERIS",
     "slug": "OPERIS",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/operisicono.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -20,16 +21,10 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true,
-      "package": "com.pglagarto.OPERIS"
+      "edgeToEdgeEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "55cd7f47-2380-4f48-b00a-abe1d12b759b"
-      }
     }
   }
 }
