--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.5.0",
+    "exceljs": "^4.4.0",
     "expo": "~54.0.25",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
