--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.5.0",
+    "dayjs": "^1.11.19",
     "exceljs": "^4.4.0",
     "expo": "~54.0.25",
     "expo-file-system": "~19.0.19",
@@ -27,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-native": "^0.81.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -35,6 +37,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
